postgres-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  type: NodePort
  ports:
  - port: 1000
    name: postgres-port
    #targetPort: This is the actual port on which your application is running inside the container.
    targetPort: 5432
    nodePort: 32222
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 3000
      name: backend-port
      targetPort: 3000
      nodePort: 32220
    - port: 80
      name: frontend-port
      targetPort: 80
      nodePort: 32221
  selector:
    app: backend

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-sfs
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgresql"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: projects/database
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
          name: postgres-port
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-storage
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: projects-backend
        image: projects/front-backend
        imagePullPolicy: Never
        command: 
        - "nginx-debug"
        - "-g"
        - "daemon off;"
        #command: 
        #- "java" 
        #- "-cp" 
        #- "target/uber.jar" 
        #- "clojure.main" 
        #- "-m" 
        #- "projects.system"
        ports:
        - containerPort: 3000
          name: backend-port
        - containerPort: 80
          name: frontend-port
